fixed images in aboutme page, fixed spacing and font on index page

--- a/Portfolio Project/HTML-FILES/damonsstylesheet.css
+++ b/Portfolio Project/HTML-FILES/damonsstylesheet.css
@@ -20,7 +20,7 @@ footer {
 .container {
     position: relative;
     text-align: center;
-    color: rgb(243, 8, 8);
+    color: black;
   }
   
   /* Bottom left text */
@@ -59,15 +59,19 @@ footer {
     transform: translate(-50%, -50%);
   }
 
-  /* h1 {
-      margin-top: 50%;
-      margin-bottom: 25%;
-  } */
+  h1 {
+      font-size: 40px;
+      color: black;
+  }
+      
   
   .link-container {
+    font-size: 25px;
     position: absolute;
-    top: 75%;
+    top: 100%;
     left: 50%;
-    margin-top: 25%;
+    margin-top: 50%;
     transform: translate(-50%, -50%);
   }
+
+  
